--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser": "~20.1.0",
     "@angular/platform-browser-dynamic": "~20.1.0",
     "@angular/router": "~20.1.0",
+    "echarts": "^5.6.0",
+    "ngx-echarts": "^20.0.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
